[project]
name = "first-simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "trafilatura>=2.0.0",
]
